--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,13 +52,15 @@ dependencies:
   uuid: ^3.0.2
   dio:
   rxdart:
-  google_places_flutter:
-  google_place: ^0.4.0
+  google_api_headers: ^1.0.0
   mvc_pattern: ^5.1.0
   carousel_slider: ^3.0.0
   url_launcher: ^6.0.3
   webview_flutter: ^2.0.4
-  # search_map_place:
+  location: ^4.1.1
+  flutter_polyline_points: ^1.0.0
+  flutter_bloc: ^7.0.0
+  google_place:
   
 
 
