--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,11 @@ dependencies:
   cloud_firestore: ^1.0.1
   image_picker: ^0.7.2+1
   pinput: ^1.2.0
-  google_nav_bar: ^5.0.3
   share: ^2.0.1
   geocoder: ^0.2.1
   geolocator: ^7.0.1
   firebase_storage: ^8.0.0
-  flutter_spinkit: ^5.0.0
+  # flutter_spinkit: ^5.0.0
   flutter_icons: ^1.1.0
   http: ^0.13.0
   step_progress_indicator: ^0.2.5+8
@@ -43,30 +42,28 @@ dependencies:
   google_fonts: ^2.0.0
   intl: ^0.17.0
   flutter_local_notifications: ^5.0.0-nullsafety.1
-  firebase_messaging: ^9.0.0
   provider: ^5.0.0
   google_maps_flutter: ^2.0.1
-  flutter_google_places:
-  flutter_map: any
-  latlong: ^0.6.1
-  uuid: ^3.0.2
-  dio:
-  rxdart:
-  google_api_headers: ^1.0.0
+  material_floating_search_bar: ^0.3.4
+  percent_indicator: ^3.0.1
+  otp_count_down: ^1.0.6
+  animated_bottom_navigation_bar: ^0.3.2  
   mvc_pattern: ^5.1.0
   carousel_slider: ^3.0.0
   url_launcher: ^6.0.3
   webview_flutter: ^2.0.4
-  location: ^4.1.1
-  flutter_polyline_points: ^1.0.0
-  flutter_bloc: ^7.0.0
-  google_place:
+  flutter_typeahead: ^3.1.3
+  fluttertoast: ^8.0.7
+  shimmer: ^2.0.0
+  
+
   
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.1.4
 
 dev_dependencies:
   flutter_test:
@@ -108,16 +105,15 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: jose
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  #       - asset: fonts/JosefinSans-VariableFont_wght.ttf
+  #         weight: 400
+    # - family: Trajan Pro
+    #   fonts:
+    #     - asset: fonts/TrajanPro.ttf
+    #     - asset: fonts/TrajanPro_Bold.ttf
+    #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
