--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   flutter_typeahead: ^3.1.3
   fluttertoast: ^8.0.7
   shimmer: ^2.0.0
+  shared_preferences: ^2.0.6
+  socket_io: ^1.0.0
+  socket_io_client: ^1.0.1
+  web_socket_channel: ^2.1.0
   
 
   
