--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,11 @@ dependencies:
   fluttertoast: ^8.0.7
   shimmer: ^2.0.0
   shared_preferences: ^2.0.6
-  socket_io: ^1.0.0
+  # socket_io:
   socket_io_client: ^1.0.1
-  web_socket_channel: ^2.1.0
+  # socket_io_client: 2.0.0-beta.4
+  # socket_io_client: ^2.0.0-beta.4
+  # web_socket_channel: ^2.1.0
   
 
   
