--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   google_maps_flutter: ^2.0.1
   material_floating_search_bar: ^0.3.4
   percent_indicator: ^3.0.1
-  otp_count_down: ^1.0.6
+  # otp_count_down: ^1.0.6
   animated_bottom_navigation_bar: ^0.3.2  
   mvc_pattern: ^5.1.0
   carousel_slider: ^3.0.0
