--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
    <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="spotmies"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        >
+        
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
