--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   socket_io_client: ^1.0.1
   flutter_svg:
   dotted_border:
+  video_player: ^2.1.14
   # socket_io_client: 2.0.0-beta.4
   # socket_io_client: ^2.0.0-beta.4
   # web_socket_channel: ^2.1.0
