--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   flutter_svg:
   dotted_border:
   video_player: ^2.1.14
+  flutter_webrtc:  ^0.6.5
   # socket_io_client: 2.0.0-beta.4
   # socket_io_client: ^2.0.0-beta.4
   # web_socket_channel: ^2.1.0
