--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,12 @@ dependencies:
   dotted_border:
   video_player: ^2.1.14
   flutter_webrtc:  ^0.6.5
+  lottie: ^1.1.0
+  photo_view: ^0.12.0
+  permission_handler: ^8.1.4+2
+  flutter_audio_recorder2: ^0.0.2
+  audioplayers: ^0.19.1
+  path_provider: ^2.0.3
   
 
   
@@ -121,6 +127,7 @@ flutter:
     - assets/software.svg
     - assets/tradesman.svg
     - assets/success.svg
+    - assets/spotmies_logo.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
