--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,6 +128,7 @@ flutter:
     - assets/tradesman.svg
     - assets/success.svg
     - assets/spotmies_logo.json
+    - assets/onPending.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
