--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,7 +102,6 @@ flutter:
     - assets/4.png
     - assets/5.png
     - assets/6.svg
-    - assets/7.png
     - assets/images/
     - assets/icons/
     - assets/intro.svg
@@ -129,6 +128,11 @@ flutter:
     - assets/success.svg
     - assets/spotmies_logo.json
     - assets/onPending.json
+    - assets/sending.json
+    - assets/succuss.json
+    - assets/fail.json
+    - assets/login.svg
+    - assets/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
