--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ dependencies:
   audioplayers: ^0.19.1
   path_provider: ^2.0.3
   timelines: ^0.1.0
+  firebase_messaging: ^10.0.7
+  rxdart:
+  flutter_native_timezone: ^2.0.0
+
   
 
   
