--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -46,7 +46,7 @@ dependencies:
   google_maps_flutter: ^2.0.1
   material_floating_search_bar: ^0.3.4
   percent_indicator: ^3.0.1
-  animated_bottom_navigation_bar: ^0.3.2  
+  animated_bottom_navigation_bar: ^0.3.2
   mvc_pattern: ^5.1.0
   carousel_slider: ^3.0.0
   url_launcher: ^6.0.3
@@ -59,7 +59,7 @@ dependencies:
   flutter_svg:
   dotted_border:
   video_player: ^2.1.14
-  flutter_webrtc:  ^0.6.5
+  flutter_webrtc: ^0.6.5
   lottie: ^1.1.0
   photo_view: ^0.12.0
   permission_handler: ^8.1.4+2
@@ -72,12 +72,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   awesome_notifications: ^0.0.6+10
   country_code_picker: ^2.0.2
-
-
-  
-
-  
-
+  flutter_incall: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -87,16 +82,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-  
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -159,11 +150,11 @@ flutter:
   #     fonts:
   #       - asset: fonts/JosefinSans-VariableFont_wght.ttf
   #         weight: 400
-    # - family: Trajan Pro
-    #   fonts:
-    #     - asset: fonts/TrajanPro.ttf
-    #     - asset: fonts/TrajanPro_Bold.ttf
-    #       weight: 700
+  # - family: Trajan Pro
+  #   fonts:
+  #     - asset: fonts/TrajanPro.ttf
+  #     - asset: fonts/TrajanPro_Bold.ttf
+  #       weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
