--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,14 @@ dependencies:
   image_picker: ^0.7.2+1
   pinput: ^1.2.0
   share: ^2.0.1
-  geocoder: ^0.2.1
+  # geocoder: ^0.2.1
   geolocator: ^7.0.1
   firebase_storage: ^8.0.0
   # flutter_spinkit: ^5.0.0
   flutter_icons: ^1.1.0
   http: ^0.13.0
   step_progress_indicator: ^0.2.5+8
-  rating_dialog: ^1.0.0
+  rating_dialog: ^2.0.3
   simple_animations: ^3.0.1
   google_fonts: ^2.0.0
   intl: ^0.17.0
@@ -47,8 +47,8 @@ dependencies:
   material_floating_search_bar: ^0.3.4
   percent_indicator: ^3.0.1
   animated_bottom_navigation_bar: ^0.3.2
-  mvc_pattern: ^5.1.0
-  carousel_slider: ^3.0.0
+  mvc_pattern: ^8.5.2
+  carousel_slider: ^4.0.0
   url_launcher: ^6.0.3
   webview_flutter: ^2.0.4
   flutter_typeahead: ^3.1.3
@@ -63,7 +63,7 @@ dependencies:
   lottie: any
   photo_view: any
   permission_handler: any
-  flutter_audio_recorder2: any
+  # flutter_audio_recorder2: any
   audioplayers: any
   path_provider: any
   timelines: any
@@ -72,7 +72,7 @@ dependencies:
   flutter_native_timezone: any
   awesome_notifications: any
   country_code_picker: any
-  flutter_incall: any
+  # flutter_incall: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -80,6 +80,7 @@ dependencies:
   get: ^4.1.4
 
 dev_dependencies:
+  # flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
 
