--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   pinput: ^1.2.0
   share: ^2.0.1
   # geocoder: ^0.2.1
-  geolocator: ^7.0.1
+  geolocator: ^8.0.5
   firebase_storage: ^8.0.0
   # flutter_spinkit: ^5.0.0
   flutter_icons: ^1.1.0
@@ -71,6 +71,7 @@ dependencies:
   flutter_native_timezone: any
   awesome_notifications: any
   country_code_picker: any
+  geocoding: ^2.0.1
   # flutter_incall: any
 
   # The following adds the Cupertino Icons font to your application.
