--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   awesome_notifications: 0.6.21
   country_code_picker: any
   geocoding: ^2.0.1
+  scrollable_positioned_list: ^0.2.3
   # flutter_incall: any
 
   # The following adds the Cupertino Icons font to your application.
