--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   country_code_picker: any
   geocoding: ^2.0.1
   scrollable_positioned_list: ^0.2.3
+  syncfusion_flutter_gauges: ^19.4.38
   # flutter_incall: any
 
   # The following adds the Cupertino Icons font to your application.
