--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
          <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
    <application
         android:label="spotmies"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/launcher_icon"
         >
         
         <activity
