--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,8 +84,14 @@ dependencies:
 
 dev_dependencies:
   # flutter_lints: ^1.0.4
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -138,6 +144,7 @@ flutter:
     - assets/logo.png
     - assets/waiting.json
     - assets/translations/
+    - assets/catImages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
