--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,14 +84,14 @@ dependencies:
 
 dev_dependencies:
   # flutter_lints: ^1.0.4
-  flutter_launcher_icons: "^0.9.2"
+  # flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
-flutter_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/icons/app_icon.png"
-  remove_alpha_ios: true
+# flutter_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/icons/app_icon.png"
+#   remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
