--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = Spotmies;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.spotmies.user;
+PRODUCT_BUNDLE_IDENTIFIER = com.spotmies;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com. All rights reserved.
