--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   geocoding: ^2.0.1
   scrollable_positioned_list: ^0.2.3
   syncfusion_flutter_gauges: ^19.4.38
+  flutter_staggered_grid_view: ^0.6.1
   # flutter_incall: any
 
   # The following adds the Cupertino Icons font to your application.
