--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,38 +23,38 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase: any
-  firebase_core: ^1.11.0
-  firebase_auth: any
-  cloud_firestore: any
-  image_picker: ^0.7.2+1
-  pinput: ^1.2.0
-  share: ^2.0.1
+  firebase: ^9.0.3
+  firebase_core: ^1.17.1
+  firebase_auth: ^3.3.19
+  cloud_firestore: ^3.1.17
+  image_picker: ^0.8.5+3
+  pinput: ^2.2.11
+  # share: ^2.0.1
   # geocoder: ^0.2.1
-  geolocator: ^8.0.5
-  firebase_storage: ^10.2.7
+  geolocator: ^9.0.0
+  firebase_storage: ^10.2.17
   # flutter_spinkit: ^5.0.0
   flutter_icons: ^1.1.0
-  http: ^0.13.0
-  step_progress_indicator: ^0.2.5+8
-  simple_animations: ^3.0.1
-  google_fonts: ^2.0.0
+  http: ^0.13.4
+  step_progress_indicator: ^1.0.2
+  simple_animations: ^4.2.0
+  google_fonts: ^2.2.0
   intl: ^0.17.0
-  flutter_local_notifications: ^9.2.0
-  provider: ^5.0.0
-  google_maps_flutter: ^2.1.1
-  material_floating_search_bar: ^0.3.4
-  percent_indicator: ^3.0.1
-  animated_bottom_navigation_bar: ^0.3.2
-  mvc_pattern: ^8.5.2
-  carousel_slider: ^4.0.0
-  url_launcher: ^6.0.3
-  webview_flutter: ^2.0.4
-  flutter_typeahead: ^3.1.3
-  fluttertoast: ^8.0.7
+  flutter_local_notifications: ^9.6.1
+  provider: ^6.0.3
+  google_maps_flutter: ^2.1.8
+  material_floating_search_bar: ^0.3.7
+  percent_indicator: ^4.2.2
+  animated_bottom_navigation_bar: ^0.3.3
+  mvc_pattern: ^8.10.2
+  carousel_slider: ^4.1.1
+  url_launcher: ^6.1.3
+  webview_flutter: ^3.0.4
+  flutter_typeahead: ^4.0.0
+  fluttertoast: ^8.0.9
   shimmer: ^2.0.0
-  shared_preferences: ^2.0.6
-  socket_io_client: ^1.0.1
+  shared_preferences: ^2.0.15
+  socket_io_client: ^1.0.2
   flutter_svg:
   dotted_border:
   video_player: any
@@ -69,19 +69,19 @@ dependencies:
   firebase_messaging: any
   rxdart: any
   flutter_native_timezone: any
-  awesome_notifications: 0.6.21
+  awesome_notifications: ^0.6.21
   country_code_picker: any
-  geocoding: ^2.0.1
-  scrollable_positioned_list: ^0.2.3
-  syncfusion_flutter_gauges: ^19.4.38
+  geocoding: ^2.0.4
+  scrollable_positioned_list: ^0.3.2
+  syncfusion_flutter_gauges: ^20.2.36
   flutter_staggered_grid_view: ^0.6.1
   # flutter_incall: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  get: ^4.1.4
-  easy_localization: ^3.0.0
+  cupertino_icons: ^1.0.5
+  get: ^4.6.5
+  easy_localization: ^3.0.1
 
 dev_dependencies:
   # flutter_lints: ^1.0.4
